--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,3 @@
-/**
-mi comentario
-*/
 
 body {
     background-color:rgb(255, 255, 255); opacity:0,1;
@@ -59,19 +56,14 @@ Alternativo para parrafo en perfil sin js
     font-size: 18px;  margin:5px; border:2px; 
 }
 
-#div_boton p, #div_boton p2, #div_boton p3
+#div_boton p, #div_boton p2, #div_boton p3, #div_boton p4
 {
     color:black; 
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 16,67px;  margin:5px; border:2px; 
 }
 
-#div_boton p4
-{
-    color:black; 
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 16,67px;  margin:5px; border:2px;  
-}
+
 * p {
     color:orange
 }
